--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,10 @@ jobs:
         run: npm run build
 
       - name: Upload to GitHub Pages
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
+          name: github-pages
           path: "dist"
+
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
